added login panel and content

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li> <a href="#">Şehirler</a></li>
             <li> <a href="#">İletişim</a></li>
         </ul>
-        
+
     </header>
 
     <a action="#" method="post" id="form1" name="form1">
@@ -32,9 +32,28 @@
 
     </form>
     <hr class="hr">
+    <div class="middle">
+      <h1 class="baslik">Web Projesi</h1>
+      <p class="paragraf">Web Sayfama hoş geldiniz! Buradan şehirler, iletişim, hakkımızda,
+        arama butonu <br> gibi özelliklere ulaşabilirsiniz.
+         Web sitesi Html, Css kullanılarak yapılmıştır. <br> <br>
+         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor <br>
+          incididunt ut labore et dolore
+      </p>
+    </div>
+
+    <div class="cp">
+      <form class="form2" action="#" method="post">
+
+        <h2 class="loginbaslik">Login Panel</h2> <br> <br> <br>
+
+        <input type="text" name="username" id="username" placeholder="Kullanıcı adınız"> <br> <br>
+        <input type="password" name="password" id="password" placeholder="Şifreniz">
+
+      </form>
+
+    </div>
 
 
-</div>
 </body>
-
 </html>
