update login panel and added footer

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Ali" />
     <link rel="stylesheet" type="text/css" href="style.css">
-
+    <link rel="shotcut icon" href="../images/home.ico">
     <title>Web Projesi</title>
 </head>
 
@@ -30,30 +30,36 @@
         <input type="search" placeholder="Arama kısmı" id="search">
         <a href="#"><button type="submit" class="aramabutonu">Ara</button> </a>
 
-    </form>
-    <hr class="hr">
-    <div class="middle">
-      <h1 class="baslik">Web Projesi</h1>
-      <p class="paragraf">Web Sayfama hoş geldiniz! Buradan şehirler, iletişim, hakkımızda,
-        arama butonu <br> gibi özelliklere ulaşabilirsiniz.
-         Web sitesi Html, Css kullanılarak yapılmıştır. <br> <br>
-         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor <br>
-          incididunt ut labore et dolore
-      </p>
-    </div>
+        </form>
+        <hr class="hr">
+        <div class="content">
+            <h1 class="baslik">Web Projesi</h1>
+            <p class="paragraf">Web Sayfama hoş geldiniz! Buradan şehirler, iletişim, hakkımızda,
+                arama butonu <br> gibi özelliklere ulaşabilirsiniz.
+                Web sitesi Html, Css kullanılarak yapılmıştır. <br> <br>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor <br>
+                incididunt ut labore et dolore
+            </p>
+        </div>
 
-    <div class="cp">
-      <form class="form2" action="#" method="post">
+        <div class="cp">
+            <form class="form2" action="#" method="post">
 
-        <h2 class="loginbaslik">Login Panel</h2> <br> <br> <br>
+                <h2 class="loginbaslik">Login Panel</h2> <br> <br> <br>
 
-        <input type="text" name="username" id="username" placeholder="Kullanıcı adınız"> <br> <br>
-        <input type="password" name="password" id="password" placeholder="Şifreniz">
+                <input type="text" name="username" id="username" placeholder="Kullanıcı adınız"> <br> <br> <br>
+                <input type="password" name="password" id="password" placeholder="Şifreniz">
+                <input type="reset" class="reset" value="Sıfırla">
+                <button class="girisyap">Giriş Yap</button>
+            </form>
+        </div>
 
-      </form>
+        <footer>
 
-    </div>
+            <h2>Yardıma mı ihtiyacınız var? Hemen bize ulaşın: 0555 555 55 55</h2>
 
+        </footer>
 
 </body>
+
 </html>
