--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Ali" />
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="shotcut icon" href="../images/home.ico">
+    <link rel="shortcut icon" href="./images/home.ico">
     <title>Web Projesi</title>
 </head>
 
