--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Ali" />
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" href="./images/home.ico">
-    <title>Web Projesi</title>
+    <title>School Project</title>
 </head>
 
 <body class="main">
@@ -15,51 +15,40 @@
         <h2 class="logo">
             <span class="text-primary">ewni</span><span class="text-secondary">uL</span>
         </h2>
-
         <ul>
-            <li> <a href="#">Ana Sayfa</a></li>
-            <li> <a href="#">Hakkımızda</a></li>
-            <li> <a href="#">Şehirler</a></li>
-            <li> <a href="#">İletişim</a></li>
+            <li> <a href="#">Home</a></li>
+            <li> <a href="#">About</a></li>
+            <li> <a href="#">Cities</a></li>
+            <li> <a href="#">Contact</a></li>
         </ul>
-
     </header>
-
     <a action="#" method="post" id="form1" name="form1">
-
-        <input type="search" placeholder="Arama kısmı" id="search">
-        <a href="#"><button type="submit" class="aramabutonu">Ara</button> </a>
-
+        <input type="search" placeholder="Search here" id="search">
+        <a href="#"><button type="submit" class="aramabutonu">Search</button> </a>
         </form>
         <hr class="hr">
         <div class="content">
-            <h1 class="baslik">Web Projesi</h1>
-            <p class="paragraf">Web Sayfama hoş geldiniz! Buradan şehirler, iletişim, hakkımızda,
-                arama butonu <br> gibi özelliklere ulaşabilirsiniz.
-                Web sitesi Html, Css kullanılarak yapılmıştır. <br> <br>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor <br>
-                incididunt ut labore et dolore
-            </p>
+            <h1 class="baslik">School Project</h1>
+            <pre>
+                    Welcome to our website! We're delighted to have you here. Take a moment to 
+                discover the array of features available to you, ranging from exploring 
+                different cities to accessing our contact details, learning more about our 
+                company in the about us section, and easily navigating through our
+                content with the search button, all meticulously designed and 
+                implemented using HTML and CSS.
+            </pre>
         </div>
-
         <div class="cp">
             <form class="form2" action="#" method="post">
-
                 <h2 class="loginbaslik">Login Panel</h2> <br> <br> <br>
-
-                <input type="text" name="username" id="username" placeholder="Kullanıcı adınız"> <br> <br> <br>
-                <input type="password" name="password" id="password" placeholder="Şifreniz">
-                <input type="reset" class="reset" value="Sıfırla">
-                <button class="girisyap">Giriş Yap</button>
+                <input type="text" name="username" id="username" placeholder="Username"> <br> <br> <br>
+                <input type="password" name="password" id="password" placeholder="Password">
+                <input type="reset" class="reset" value="Reset">
+                <button class="girisyap">Login</button>
             </form>
         </div>
-
         <footer>
-
-            <h2>Yardıma mı ihtiyacınız var? Hemen bize ulaşın: 0555 555 55 55</h2>
-
+            <h2>Do you need help? Call me! +90 555 555 55 55</h2>
         </footer>
-
 </body>
-
 </html>
